--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,2 +1,3 @@
+theme: jekyll-theme-cayman
 title: RoWild
-theme: jekyll-theme-time-machine
+description: "A Comprehensive, Cross-Platform Benchmark Suite for Real-Time Robotics"
